--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ server.servlet.context-path=/
 
 # datasource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/odo_db?serverTimezone=UTC&useUnicode=yes&characterEncoding=UTF-8
-#spring.datasource.url=jdbc:mysql://mysql.c3gqa6mg88f0.ap-northeast-2.rds.amazonaws.com:3306/odo_db?serverTimezone=UTC&useUnicode=yes&characterEncoding=UTF-8
+#spring.datasource.url=jdbc:mysql://localhost:3306/odo_db?serverTimezone=UTC&useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://mysql.c3gqa6mg88f0.ap-northeast-2.rds.amazonaws.com:3306/odo_db?serverTimezone=UTC&useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=odo
 spring.datasource.password=odo
 
