--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,5 +49,9 @@ jobs:
             sudo docker pull y2s9358/odo:latest
             sudo docker stop odo || true
             sudo docker rm odo || true
-            sudo docker run -d --name odo -p 9090:9090 -v /home/ec2-user/upload:app/upload y2s9358/odo:latest
+            sudo docker run -d \
+              --name odo \
+              -p 9090:9090 \
+              -v /home/ec2-user/upload:/app/upload \
+              y2s9358/odo:latest
             
